<resources>
    <string name="app_name">BotsUp</string>

    <!--ViewPager Fragment-->
    <string name="camera_fragment">Camera section</string>
    <string name="chats_fragment">Chats section</string>
    <string name="status_fragment">Status section</string>
    <string name="calls_fragment">Calls section</string>

    <!--Menu Items-->
    <string name="menu_about">About</string>

    <!--Array for Names in TabLayout-->
    <string-array name="homepage_screen_names">
        <item>Camera</item>
        <item>Chats</item>
        <item>Status</item>
        <item>Calls</item>
    </string-array>

    <!--About Section Strings-->
    <string name="app_version">Version %s</string>
    <string name="copyright_notice">\u00A9 2020 Hemanshu Varma</string>

    <!--Camera Section Strings-->
    <string name="notify">Notify</string>
    <string name="notifications_already_subscribed">You\'re already subscribed</string>

    <!--Chat Section Strings-->
    <string name="new_chat">Start new conversation</string>
    <string name="empty_view_message">Oops! No conversations yet</string>

    <!--Status Section Strings-->
    <string name="status_header_title">My Status</string>
    <string name="status_header_sub_title">Tap to add status update</string>
    <string name="status_updates_header">Status updates</string>
    <string name="dummy_status_time">Today, 12:00 am</string>

    <!--Calls Section Strings-->
    <string name="calls_info">Start making calls and see the magic</string>

    <!--Notification Channels-->
    <string name="local_notification_channel_id">notify_local</string>
    <string name="local_notification_channel_name">Notify Local</string>
    <string name="local_notification_channel_description">Channel for local notifications</string>
    <string name="fcm_notification_channel_id">notify_fcm</string>
    <string name="fcm_notification_channel_name">Notify FCM</string>
    <string name="fcm_notification_channel_description">Channel for FCM notifications</string>

</resources>
